Adicionando Header transparente, reformulação do formato do header e da home

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -21,6 +21,11 @@ body {
     src: url("../assets/fonts/Bebas_Neue/BebasNeue-Regular.ttf")
 }
 
+#root {
+    display: flex;
+    flex-direction: column;
+}
+
 .link-arede {
     text-decoration: none;
     color: #fff;
