--- a/src/styles/transparentHeader.scss
+++ b/src/styles/transparentHeader.scss
@@ -1,10 +1,12 @@
-.header-element {
+.transparent-header-element {
     align-items: center;
-    background: #F2F2F2;
+    background: transparent;
     display: flex;
     justify-content: center;
-    padding: 0 2rem;
     min-height: 100px;
+    position: absolute;
+    top: 0;
+    align-self: center;
 
     div {
         display: flex;
@@ -19,8 +21,12 @@
             gap: 0;
         }
 
-        .header-logo {
+        .transparent-header-logo {
             height: 80px;
+
+            path {
+                fill: #f2f2f2 !important;
+            }
         }
     }
 }
