Adicionando nova section na home

--- a/src/styles/aligner.scss
+++ b/src/styles/aligner.scss
@@ -26,3 +26,11 @@
 .aligner-center {
     justify-content: center;
 }
+
+.aligner-start {
+    align-self: flex-start;
+}
+
+.aligner-end {
+    align-self: flex-end;
+}
