Criando página de portifólio

--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -13,6 +13,7 @@
     font-family: "JetBrains Mono",monospace;
     height: 48px;
     justify-content: center;
+    gap: 10px;
     line-height: 1;
     list-style: none;
     overflow: hidden;
