--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -2,8 +2,10 @@
     min-height: calc(100vh - 25px - 40px - 30px);
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
     padding: 2rem;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
 }
