--- a/src/styles/aligner.scss
+++ b/src/styles/aligner.scss
@@ -3,6 +3,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
     gap: 10px;
 
     @media (max-width: 768px) {
