--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -4,6 +4,9 @@
     margin-top: 0;
     text-align: center;
 
+    @media (max-width: 1300px) {
+        font-size: 1.5rem;
+    }
     @media (max-width: 768px) {
         font-size: 1.3rem;
     }
@@ -16,6 +19,9 @@
     margin-top: 0;
     text-align: justify;
 
+    @media (max-width: 1300px) {
+        font-size: 1.1rem;
+    }
     @media (max-width: 768px) {
         font-size: 0.9rem;
         padding: 0;
